noinst_LTLIBRARIES = libguichan_widgets.la

INCLUDES = -I$(top_srcdir)/include

# The Gui-chan library sources
libguichan_widgets_la_SOURCES = \
	button.cpp		\
	checkbox.cpp		\
	container.cpp		\
	dropdown.cpp		\
	icon.cpp		\
	imagebutton.cpp		\
	label.cpp		\
	listbox.cpp		\
	radiobutton.cpp		\
	scrollarea.cpp		\
	slider.cpp		\
	tab.cpp			\
	tabbedarea.cpp		\
	textbox.cpp		\
	textfield.cpp		\
	window.cpp

