lib_LTLIBRARIES = libguichan_opengl.la

INCLUDES = -I$(top_srcdir)/include

libguichan_opengl_la_LDFLAGS = -no-undefined -release $(LT_RELEASE) -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) 

libguichan_opengl_la_SOURCES =	\
	opengl.cpp		\
	openglimage.cpp		\
	openglgraphics.cpp

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = guichan_opengl-0.8.pc

EXTRA_DIST = guichan_opengl-0.8.pc.in
