SUBDIRS = @GUICHAN_EXTRADIRS@ widgets

libguichanincludedir = $(includedir)/guichan

libguichaninclude_HEADERS =	\
	actionevent.hpp		\
	actionlistener.hpp	\
	allegro.hpp		\
	basiccontainer.hpp	\
	cliprectangle.hpp	\
	color.hpp		\
	deathlistener.hpp	\
	defaultfont.hpp		\
	event.hpp		\
	exception.hpp		\
	focushandler.hpp	\
	font.hpp		\
	glut.hpp		\
	graphics.hpp		\
	gui.hpp			\
	image.hpp		\
	imagefont.hpp		\
	imageloader.hpp		\
	input.hpp		\
	inputevent.hpp		\
	key.hpp			\
	keyevent.hpp		\
	keyinput.hpp		\
	keylistener.hpp		\
	listmodel.hpp		\
	mouseevent.hpp		\
	mouseinput.hpp		\
	mouselistener.hpp	\
	opengl.hpp		\
	platform.hpp		\
	rectangle.hpp		\
	sdl.hpp			\
	widget.hpp		\
	x.hpp			
