libguichanincludedir = $(includedir)/guichan/widgets/

libguichaninclude_HEADERS =	\
	button.hpp		\
	checkbox.hpp		\
	container.hpp		\
	dropdown.hpp		\
	icon.hpp		\
	imagebutton.hpp		\
	label.hpp		\
	listbox.hpp		\
	scrollarea.hpp		\
	slider.hpp		\
	radiobutton.hpp		\
	tab.hpp			\
	tabbedarea.hpp		\
	textbox.hpp		\
	textfield.hpp		\
	window.hpp
